--- a/views/learn.hbs
+++ b/views/learn.hbs
@@ -74,9 +74,7 @@
         .secondary.pointing.menu .toc.item {
             display: none;
         }
-    #customColumn:hover{
-        border: 1px solid #D4D4D5;
-    }
+
         @media only screen and (max-width: 700px) {
             .ui.fixed.menu {
                 display: none !important;
@@ -109,8 +107,6 @@
     <script src="../dist/components/sidebar.js"></script>
     <script src="../dist/components/transition.js"></script>
 </head>
-
-<body class="pushable">
 <div id="topmenuContainerWrapper">
     <div id="contentContainerLogo">
         <img src="/images/pulselogo.png" id="imageInDiv">
@@ -198,29 +194,44 @@
 </div>
 <!-- Page Contents -->
 <div class="pusher">
-    <div class="ui inverted vertical masthead center aligned segment">
-        <div class="ui text container">
-            <h1 class="ui inverted header"> Imagine-a-Car-Tracking-Platform</h1>
-            <h2>Track cars wherever they are, whenever you want.</h2><br>
-            <div class="ui huge primary button">Watch video<i class="right arrow icon"></i></div>
+    <div class="ui vertical stripe quote segment">
+        <div class="ui equal width stackable internally celled grid">
+            <div class="row">
+                <div class="column">
+                    <h3 style="color: black;">Our Car Detector Just Got A Lot Better</h3>
+                    <p style="color: #363945;">We have just updated our product by detecting license plates to<br>gain more information from detected cars. See our blog for more<br>information.</p>
+                </div>
+                <div class="column" style="background-color: #00AEEF;">
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="ui vertical stripe segment">
-        <div class="ui middle aligned stackable grid container">
-            <div class="row">
-                <div class="eight wide column">
-                    <h3 class="ui header" style="color: #00AEEF">Pulse</h3>
-                    <p>A car tracking platform that monitors traffic by detecting every car on road.......</p>
+    <div class="ui vertical stripe quote segment">
+        <div class="ui equal width stackable internally celled grid">
+            <div class="center aligned row">
+
+                <div class="column" style="background-color: white;">
+                    <a href="https://github.com/PLA24">
+                        <h3 style="color: white;"></h3>
+                        <p style="color: #363945;"></p>
+                    </a>
                 </div>
-                <div class="six wide right floated column">
-                    <img src="/images/banner.jpg" class="ui large bordered rounded image">
+                <div class="column" style="background-color: #00AEEF;">
+                    <a href="https://trello.com/b/o7aDbwqp/rd">
+                        <h3 style="color: white;">Trello.</h3>
+                        <p style="color: #363945;">Click here to see our Trello cards for future product changes</p></a>
                 </div>
-            </div>
-            <div class="row">
-                <div class="center aligned column">
-                    <a href="/solution">
-                    <div class="ui huge primary button">See our solution<i class="right arrow icon"></i></div>
+                <div class="column" style="background-color: white;">
+                    <a href="https://github.com/PLA24">
+                        <h3 style="color: white;"></h3>
+                        <p style="color: #363945;"></p>
+                    </a>
+                </div>
+                <div class="column" style="background-color: #00AEEF;">
+                    <a href="https://github.com/PLA24">
+                    <h3 style="color: white;">Github.</h3>
+                    <p style="color: #363945;">Click here to see our code</p>
                     </a>
                 </div>
             </div>
@@ -228,115 +239,47 @@
     </div>
 
 
+
     <div class="ui vertical stripe quote segment">
         <div class="ui equal width stackable internally celled grid">
             <div class="center aligned row">
-                <div class="column" style="background-color: white;" id="customColumn">
-                    <h3 style="color: #00AEEF;">Live Car Detection.</h3>
-                    <p style="color: #363945;">Track cars live on every road in your region. </p>
+
+                <div class="column" style="background-color: #00AEEF;">
+                    <a href="https://github.com/PLA24/Blog/tree/master/source/_posts">
+                        <h3 style="color: white;">Blog.</h3>
+                        <p style="color: #363945;">Click here to see our weekly blog with new posts about new features/updates!</p>
+                    </a>
                 </div>
-                <div class="column" style="background-color: #00AEEF;" id="customColumn">
-                    <h3 style="color: white;">Lorem ipsum.</h3>
-                    <p style="color: #363945;">Track cars live on every road in your region. </p>
+                <div class="column" style="background-color: white;">
+                    <a href="https://github.com/PLA24">
+                        <h3 style="color: white;"></h3>
+                        <p style="color: #363945;"></p>
+                    </a>
                 </div>
-                <div class="column" style="background-color: white;" id="customColumn">
-                    <h3 style="color: #00AEEF;">Lorem ipsum.</h3>
-                    <p style="color: #363945;">Track cars live on every road in your region. </p>
+                <div class="column" style="background-color: #00AEEF;">
+                    <a href="https://www.gofundme.com">
+                        <h3 style="color: white;">Donate.</h3>
+                        <p style="color: #363945;">Donations help support this project but are NOT required or even expected.</p></a>
                 </div>
-                <div class="column" style="background-color: #00AEEF;" id="customColumn">
-                    <h3 style="color: white;">Lorem ipsum</h3>
-                    <p style="color: #363945;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis </p>
+                <div class="column" style="background-color: white;">
+                    <a href="https://github.com/PLA24">
+                        <h3 style="color: white;"></h3>
+                        <p style="color: #363945;"></p>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="ui vertical stripe quote segment">
-            <div class="ui sizer vertical segment" id="ourTeamContainer">
-                <div class="ui huge header" style="text-align: center; color: #00AEEF"></div>
-                <p></p>
-            </div>
         <div class="ui equal width stackable internally celled grid">
             <div class="center aligned row">
-                <div class="column">
-                    <i class="user icon" style="font-size: 5em; color: #2185d0"></i>
-                    <h3 style="font-size: 20px; color: #2185d0">"There will be almost no traffic jams in the year 2025. Thanks to the Pulse car tracking platform."</h3>
-                    <p style="color: #2185d0"><em><u>Tim Klemink City Councilor of Utrecht</u></em></p>
-                </div>
-                <div class="column">
-                    <i class="user icon" style="font-size: 5em; color: #2185d0"></i>
-                    <h3 style="font-size: 20px; color: #2185d0">"It's amazing how we can gather information about all the cars in our region. This way we can analyse a lot and start improving traffic."</h3>
-                    <p style="color: #2185d0">
-                        <em>Eberhard van der Laan mayor of Amsterdam.</em>
-                    </p>
+                <div class="column" style="background-color: #00AEEF;">
+                    <p style="color: white;"><a href="/learn" style="color: white"><strong><u>Click here to download the user manual</u></strong></a></p>
                 </div>
             </div>
         </div>
     </div>
-
-    <div class="ui vertical stripe segment">
-
-    <div class="ui vertical stripe quote segment">
-    <div class="ui equal width stackable internally celled grid">
-            <div class="ui sizer vertical segment" id="ourTeamContainer">
-                <div class="ui huge header" style="text-align: center; color: #00AEEF">Our Team</div>
-                <p></p>
-            </div>
-            <div class="center aligned row">
-                <div class="column">
-                    <i class="user icon" style="font-size: 5em"></i>
-                    <h2 style="color: #00AEEF;">Mourad Abouchen</h2>
-                    <p style="color: #00AEEF;">Co-owner</p>
-                </div>
-                <div class="column">
-                    <i class="user icon" style="font-size: 5em"></i>
-                    <h2 style="color: #00AEEF;">Souhail Faiz</h2>
-                    <p style="color: #00AEEF;">Co-owner</p>
-                </div>
-                <div class="column">
-                    <i class="user icon" style="font-size: 5em"></i>
-                    <h2 style="color: #00AEEF;">Raphael Bunck</h2>
-                    <p style="color: #00AEEF;">Co-owner</p>
-                </div>
-                <div class="column">
-                    <i class="user icon" style="font-size: 5em"></i>
-                    <h2 style="color: #00AEEF;">Stijn Klopper</h2>
-                    <p style="color: #00AEEF;">Co-owner</p>
-                </div>
-                <div class="column">
-                    <i class="user icon" style="font-size: 5em"></i>
-                    <h2 style="color: #00AEEF;">Ziggy Veerman</h2>
-                    <p style="color: #00AEEF;">Co-owner</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
-
-    <div class="ui inverted vertical footer segment" style="background-color: #2185d0;">
-        <div class="ui container">
-            <div class="ui stackable inverted divided equal height stackable grid">
-                <div class="three wide column">
-                    <img src="/images/pulselogo.png" class="ui avatar image" style="width: 150px; height:150px; margin: -30px 0px 0px -100px">
-                </div>
-                <div class="three wide column">
-                    <div class="ui inverted link list" style="color: white;">
-                        <a href="/" class="item">Product</a>
-                        <a href="/solution" class="item">Idea</a>
-                        <a href="/learn" class="item">Learn</a>
-                    </div>
-                </div>
-                <div class="three wide column">
-                    <div class="ui inverted link list">
-                        <a href="/about" class="item">About</a>
-                        <a href="/support" class="item">Support</a>
-                        <a href="/pricing" class="item">Pricing</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
 </body>
 </html>
