--- a/views/support.hbs
+++ b/views/support.hbs
@@ -74,9 +74,7 @@
         .secondary.pointing.menu .toc.item {
             display: none;
         }
-    #customColumn:hover{
-        border: 1px solid #D4D4D5;
-    }
+
         @media only screen and (max-width: 700px) {
             .ui.fixed.menu {
                 display: none !important;
@@ -108,6 +106,7 @@
     <script src="../dist/components/visibility.js"></script>
     <script src="../dist/components/sidebar.js"></script>
     <script src="../dist/components/transition.js"></script>
+
 </head>
 
 <body class="pushable">
@@ -198,119 +197,81 @@
 </div>
 <!-- Page Contents -->
 <div class="pusher">
-    <div class="ui inverted vertical masthead center aligned segment">
-        <div class="ui text container">
-            <h1 class="ui inverted header"> Imagine-a-Car-Tracking-Platform</h1>
-            <h2>Track cars wherever they are, whenever you want.</h2><br>
-            <div class="ui huge primary button">Watch video<i class="right arrow icon"></i></div>
-        </div>
-    </div>
-
-    <div class="ui vertical stripe segment">
-        <div class="ui middle aligned stackable grid container">
-            <div class="row">
-                <div class="eight wide column">
-                    <h3 class="ui header" style="color: #00AEEF">Pulse</h3>
-                    <p>A car tracking platform that monitors traffic by detecting every car on road.......</p>
-                </div>
-                <div class="six wide right floated column">
-                    <img src="/images/banner.jpg" class="ui large bordered rounded image">
-                </div>
-            </div>
-            <div class="row">
-                <div class="center aligned column">
-                    <a href="/solution">
-                    <div class="ui huge primary button">See our solution<i class="right arrow icon"></i></div>
-                    </a>
+    <div class="ui vertical stripe quote segment">
+        <div class="ui equal width stackable internally celled grid">
+            <div class="center aligned row">
+                <div class="column" style="background-color: #00AEEF;">
+                    <h3 style="color: white;">Support.</h3>
                 </div>
             </div>
         </div>
     </div>
 
+    <div class="ui vertical stripe quote segment">
+        <div class="ui equal width stackable internally celled grid">
+            <div class=" row">
+                <div class="column" style="background-color: white; text-align: center" id="customColumn" >
+                    <h3 style="color: #00AEEF;">FAQ</h3>
+                    <div class="ui grid">
+                        <div class="four wide column">
+                            <div class="ui vertical fluid tabular menu">
+                                <a class="item">
+                                    Lorem ipsum
+                                </a>
+                                <a class="item">
+                                    Lorem ipsum
+                                </a>
+                                <a class="item active">
+                                    Lorem ipsum
+                                </a>
+                                <a class="item">
+                                    Lorem ipsum
+                                </a>
+                            </div>
+                        </div>
+                        <div class="twelve wide stretched column">
+                            <div class="ui segment">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="column" style="background-color: white;" id="customColumn">
+                    <h3 style="color: #00AEEF; text-align: center">Ask A Question</h3>
+                        <form class="ui form">
+                            <div class="field">
+                                <label>First Name</label>
+                                <input type="text" name="first-name" placeholder="First Name">
+                            </div>
+                            <div class="field">
+                                <label>Last Name</label>
+                                <input type="text" name="last-name" placeholder="Last Name">
+                            </div>
+                            <div class="field">
+                                <label>Text</label>
+                                <textarea></textarea>
+                            </div>
+                            <div class="field">
+                                <div class="ui checkbox">
+                                    <input type="checkbox" tabindex="0" class="hidden">
+                                    <label>I have not found an answer in the FAQ or manual</label>
+                                </div>
+                            </div>
+                            <button class="ui button" type="submit">Submit</button>
+                        </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="ui vertical stripe quote segment">
         <div class="ui equal width stackable internally celled grid">
             <div class="center aligned row">
-                <div class="column" style="background-color: white;" id="customColumn">
-                    <h3 style="color: #00AEEF;">Live Car Detection.</h3>
-                    <p style="color: #363945;">Track cars live on every road in your region. </p>
-                </div>
-                <div class="column" style="background-color: #00AEEF;" id="customColumn">
-                    <h3 style="color: white;">Lorem ipsum.</h3>
-                    <p style="color: #363945;">Track cars live on every road in your region. </p>
-                </div>
-                <div class="column" style="background-color: white;" id="customColumn">
-                    <h3 style="color: #00AEEF;">Lorem ipsum.</h3>
-                    <p style="color: #363945;">Track cars live on every road in your region. </p>
-                </div>
-                <div class="column" style="background-color: #00AEEF;" id="customColumn">
-                    <h3 style="color: white;">Lorem ipsum</h3>
-                    <p style="color: #363945;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis </p>
+                <div class="column" style="background-color: #00AEEF;">
+                    <p style="color: white;">Want to check the user manual ? <a href="/learn" style="color: white"><u>Click here.</u></a></p>
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="ui vertical stripe quote segment">
-            <div class="ui sizer vertical segment" id="ourTeamContainer">
-                <div class="ui huge header" style="text-align: center; color: #00AEEF"></div>
-                <p></p>
-            </div>
-        <div class="ui equal width stackable internally celled grid">
-            <div class="center aligned row">
-                <div class="column">
-                    <i class="user icon" style="font-size: 5em; color: #2185d0"></i>
-                    <h3 style="font-size: 20px; color: #2185d0">"There will be almost no traffic jams in the year 2025. Thanks to the Pulse car tracking platform."</h3>
-                    <p style="color: #2185d0"><em><u>Tim Klemink City Councilor of Utrecht</u></em></p>
-                </div>
-                <div class="column">
-                    <i class="user icon" style="font-size: 5em; color: #2185d0"></i>
-                    <h3 style="font-size: 20px; color: #2185d0">"It's amazing how we can gather information about all the cars in our region. This way we can analyse a lot and start improving traffic."</h3>
-                    <p style="color: #2185d0">
-                        <em>Eberhard van der Laan mayor of Amsterdam.</em>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="ui vertical stripe segment">
-
-    <div class="ui vertical stripe quote segment">
-    <div class="ui equal width stackable internally celled grid">
-            <div class="ui sizer vertical segment" id="ourTeamContainer">
-                <div class="ui huge header" style="text-align: center; color: #00AEEF">Our Team</div>
-                <p></p>
-            </div>
-            <div class="center aligned row">
-                <div class="column">
-                    <i class="user icon" style="font-size: 5em"></i>
-                    <h2 style="color: #00AEEF;">Mourad Abouchen</h2>
-                    <p style="color: #00AEEF;">Co-owner</p>
-                </div>
-                <div class="column">
-                    <i class="user icon" style="font-size: 5em"></i>
-                    <h2 style="color: #00AEEF;">Souhail Faiz</h2>
-                    <p style="color: #00AEEF;">Co-owner</p>
-                </div>
-                <div class="column">
-                    <i class="user icon" style="font-size: 5em"></i>
-                    <h2 style="color: #00AEEF;">Raphael Bunck</h2>
-                    <p style="color: #00AEEF;">Co-owner</p>
-                </div>
-                <div class="column">
-                    <i class="user icon" style="font-size: 5em"></i>
-                    <h2 style="color: #00AEEF;">Stijn Klopper</h2>
-                    <p style="color: #00AEEF;">Co-owner</p>
-                </div>
-                <div class="column">
-                    <i class="user icon" style="font-size: 5em"></i>
-                    <h2 style="color: #00AEEF;">Ziggy Veerman</h2>
-                    <p style="color: #00AEEF;">Co-owner</p>
-                </div>
-            </div>
-        </div>
-    </div>
     </div>
 
     <div class="ui inverted vertical footer segment" style="background-color: #2185d0;">
